feat: desktop view completed, to responsiveness and functionalities

--- a/src/Components/Features/Features.css
+++ b/src/Components/Features/Features.css
@@ -1,5 +1,5 @@
 .features {
-  background-color: #eed79e;
+  /* background-color: #eed79e; */
   padding: 4rem 6rem 4rem 6rem;
 }
 .features-title {
