--- a/src/Components/Waitlist/WaitlistSection.css
+++ b/src/Components/Waitlist/WaitlistSection.css
@@ -1,2 +1,42 @@
-.WaitlistSection {
+.waitlistSection {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  padding: 7rem 6rem 2rem 6rem;
+}
+.waitlist-image__container {
+  width: 50%;
+  height: 30rem;
+}
+
+.waitlist-image__container img {
+  width: 100%;
+  height: 100%;
+}
+.waitlist-content {
+  width: 50%;
+  padding-top: 3rem;
+}
+.waitlist-content__title {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 58px;
+  text-align: center;
+  color: var(--primaryColor);
+}
+.waitlist-content__description {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  width: 60%;
+  color: var(--primaryColor);
 }
