--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -19,13 +19,24 @@
   gap: 10px;
 
   font-family: "Lato", sans-serif;
-
   font-style: normal;
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   line-height: 29px;
   color: #fefefe;
   text-align: center;
+}
+.features-btn:hover {
+  transition: ease-in 1s;
+
+  box-shadow: inset 400px 0 0 0 var(--secondaryColor);
+  color: var(--primaryColor);
+}
+.form-btn:hover {
+  transition: ease-in 1s;
+
+  box-shadow: inset 450px 0 0 0 #fff;
+  color: var(--primaryColor);
 }
 .form-btn {
   width: 100%;
