--- a/src/Components/Features/Features.css
+++ b/src/Components/Features/Features.css
@@ -1,13 +1,13 @@
 .features {
   /* background-color: #eed79e; */
-  padding: 4rem 6rem 4rem 6rem;
+  padding: 3rem 6rem 3rem 6rem;
 }
 .features-title {
   font-family: "Inter";
   font-style: normal;
   font-weight: 600;
-  font-size: 36px;
-  line-height: 44px;
+  font-size: 1.9rem;
+  line-height: 3rem;
   text-align: center;
   margin: 0 auto;
   width: 65%;
