--- a/src/Components/Header/Hero.css
+++ b/src/Components/Header/Hero.css
@@ -4,28 +4,28 @@ header {
   align-items: center;
   padding-left: 6rem;
   padding-right: 6rem;
-  padding-top: 104px;
   padding-bottom: 10rem;
   background-color: #f2f7ff;
-  gap: 4rem;
+
+  gap: 5rem;
 }
 .hero-content {
   width: 50%;
+  padding-top: 3rem;
 }
 .hero-content__title {
   font-family: "Inter";
   font-style: normal;
   font-weight: 600;
-  font-size: 3rem;
-  line-height: 3.6rem;
+  font-size: 2rem;
+  line-height: 3rem;
   color: var(--primaryColor);
-  margin-top: 6rem;
 }
 .hero-content__description {
   font-family: "Lato", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 1.1rem;
   line-height: 29px;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
