--- a/src/Components/Waitlist/WaitlistSection.css
+++ b/src/Components/Waitlist/WaitlistSection.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 2rem;
-  padding: 7rem 6rem 2rem 6rem;
+  padding: 3rem 6rem 2rem 6rem;
 }
 .waitlist-image__container {
   width: 50%;
@@ -22,8 +22,8 @@
   font-family: "Lato";
   font-style: normal;
   font-weight: 700;
-  font-size: 48px;
-  line-height: 58px;
+  font-size: 2rem;
+  line-height: 2.6rem;
   text-align: center;
   color: var(--primaryColor);
 }
@@ -31,12 +31,12 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 1.1rem;
   line-height: 22px;
   text-align: center;
   margin: 0 auto;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  width: 60%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  width: 70%;
   color: var(--primaryColor);
 }
