feat: responsified to mobile view, except the features components which is commented out

--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -31,3 +31,13 @@ form {
 .invalid-email {
   color: red;
 }
+@media (max-width: 950px) {
+  .form label {
+    font-size: 1.1rem;
+  }
+}
+@media (max-width: 570px) {
+  .form label {
+    font-size: 1rem;
+  }
+}
