--- a/src/Components/Header/Hero.css
+++ b/src/Components/Header/Hero.css
@@ -39,7 +39,6 @@ header {
   height: 35rem;
   width: 50%;
   position: relative;
-  background-color: red;
 }
 .hero-image__container img {
   width: 94%;
@@ -67,5 +66,142 @@ header {
   left: 0;
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1200px) {
+  .hero-content {
+    width: 45%;
+  }
+  .hero-image__container {
+    height: 32rem;
+    margin-top: -3rem;
+
+    width: 55%;
+  }
+}
+@media (max-width: 1100px) {
+  header {
+    padding-left: 5rem;
+    padding-right: 5rem;
+    gap: 3rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  header {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .hero-image__container {
+    height: 30rem;
+    width: 55%;
+  }
+}
+@media (max-width: 950px) {
+  header {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .hero-image__container {
+    height: 25rem;
+    width: 50%;
+    margin-top: -5rem;
+  }
+  .hero-content {
+    width: 50%;
+  }
+  .hero-content__title {
+    font-size: 1.7rem;
+    line-height: 2rem;
+  }
+  .hero-content__description {
+    font-size: 1.1rem;
+    line-height: 24px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 850px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 3rem;
+    padding-bottom: 5rem;
+  }
+  .hero-content {
+    order: 1;
+    padding-top: 3rem;
+    width: 70%;
+
+    /* margin: 0 auto; */
+  }
+  .hero-image__container {
+    order: 2;
+    margin-top: 0;
+    margin: 0 auto;
+
+    width: 80%;
+    height: 30rem;
+  }
+}
+@media (max-width: 700px) {
+  .hero-image__container {
+    width: 80%;
+    height: 30rem;
+  }
+}
+@media (max-width: 650px) {
+  .hero-image__container {
+    width: 90%;
+    height: 25rem;
+  }
+}
+@media (max-width: 570px) {
+  .hero-image__container {
+    width: 100%;
+    height: 23rem;
+  }
+  .hero-content {
+    order: 1;
+    padding-top: 3rem;
+    width: 80%;
+
+    /* margin: 0 auto; */
+  }
+  .hero-content__title {
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+  }
+  .hero-content__description {
+    font-size: 1rem;
+    line-height: 24px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  header {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 3rem;
+  }
+  .hero-content {
+    order: 1;
+    padding-top: 3rem;
+    width: 90%;
+
+    /* margin: 0 auto; */
+  }
+}
+
+@media (max-width: 450px) {
+  .hero-content {
+    margin: 0 auto;
+    width: 100%;
+  }
+  .hero-image__container {
+    width: 100%;
+    height: 18rem;
+  }
 }
