--- a/src/Components/Waitlist/WaitlistSection.css
+++ b/src/Components/Waitlist/WaitlistSection.css
@@ -40,3 +40,105 @@
   width: 70%;
   color: var(--primaryColor);
 }
+
+@media (max-width: 1200px) {
+  .waitlist-content {
+    width: 45%;
+  }
+  .waitlist-image__container {
+    height: 32rem;
+    margin-top: -3rem;
+
+    width: 55%;
+  }
+}
+@media (max-width: 1100px) {
+  .waitlistSection {
+    padding-left: 5rem;
+    padding-right: 5rem;
+    gap: 3rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .waitlistSection {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .waitlist-image__container {
+    height: 30rem;
+    width: 55%;
+  }
+}
+@media (max-width: 950px) {
+  .waitlistSection {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .waitlist-image__container {
+    height: 25rem;
+    width: 50%;
+    margin-top: -5rem;
+  }
+  .waitlist-content {
+    width: 50%;
+  }
+  .waitlist-content__title {
+    font-size: 1.7rem;
+    line-height: 2rem;
+  }
+  .waitlist-content__description {
+    font-size: 1.1rem;
+    line-height: 24px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 850px) {
+  .waitlistSection {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 3rem;
+    padding-bottom: 5rem;
+    background-color: #f2f7ff;
+  }
+  .waitlist-content {
+    padding-top: 3rem;
+    width: 70%;
+    margin: 0 auto;
+    /* margin: 0 auto; */
+  }
+  .waitlist-image__container {
+    order: 2;
+    margin-top: 0;
+    margin: 0 auto;
+
+    width: 80%;
+    height: 30rem;
+    display: none;
+  }
+}
+@media (max-width: 720px) {
+  .waitlist-content__description {
+    width: 80%;
+  }
+}
+@media (max-width: 630px) {
+  .waitlist-content {
+    width: 90%;
+  }
+}
+@media (max-width: 500px) {
+  .waitlistSection {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 450px) {
+  .waitlist-content {
+    width: 100%;
+  }
+}
