--- a/src/Components/Features/Feature.css
+++ b/src/Components/Features/Feature.css
@@ -44,3 +44,101 @@
   color: #3a4b69;
   /* width: 45%; */
 }
+@media (max-width: 1100px) {
+  .features {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+  .feature-image__container {
+    width: 18rem;
+    height: 18rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .features {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 950px) {
+  .features {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .features-title {
+    font-size: 1.7rem;
+    line-height: 2rem;
+  }
+  .feature-text {
+    font-size: 1.1rem;
+    line-height: 24px;
+  }
+  .feature-image__container {
+    width: 15rem;
+    height: 15rem;
+  }
+}
+@media (max-width: 850px) {
+  .features-title {
+    width: 70%;
+  }
+  .feature-image__container {
+    width: 13rem;
+    height: 13rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .feature1 {
+    gap: 3rem;
+  }
+  .feature2 {
+    gap: 3rem;
+  }
+}
+@media (max-width: 650px) {
+  .feature-image__container {
+    width: 11rem;
+    height: 11rem;
+  }
+  .feature1 .feature-image__container img {
+    top: 1rem;
+    left: 1rem;
+  }
+  .feature2 .feature-image__container img {
+    top: 1rem;
+    right: 1rem;
+  }
+}
+@media (max-width: 570px) {
+  .features-title {
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+  }
+  .feature-text {
+    font-size: 1rem;
+    line-height: 24px;
+  }
+}
+@media (max-width: 500px) {
+  .features {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+  .feature1 {
+    flex-direction: column;
+    margin-bottom: 2rem;
+    text-align: center;
+    margin-top: 2rem;
+  }
+  .feature2 {
+    flex-direction: column;
+    margin-bottom: 2rem;
+    text-align: center;
+  }
+}
+
+@media (max-width: 450px) {
+}
