--- a/src/Components/Features/Features.css
+++ b/src/Components/Features/Features.css
@@ -1,5 +1,10 @@
 .features {
-  padding: 3rem 6rem 3rem 6rem;
+  padding: 3rem 10rem 0rem 10rem;
+  background-color: #eed79e;
+  margin-top: -144px;
+  padding-top: 11rem;
+  margin-bottom: -176px;
+  padding-bottom: 16rem;
 }
 .features-title {
   font-family: "Inter";
@@ -11,6 +16,62 @@
   margin: 0 auto;
   width: 65%;
   color: var(--primaryColor);
+}
+.feature-btn {
+  width: 45%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0.7rem 0;
+  background: #3a4b69;
+  list-style: none;
+}
+.feature-btn a {
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.2rem;
+  line-height: 29px;
+  color: #fefefe;
+  text-align: center;
+}
+@media (max-width: 1000px) {
+  .feature-btn {
+    width: 50%;
+  }
+}
+@media (max-width: 750px) {
+  .feature-btn {
+    width: 55%;
+  }
+}
+@media (max-width: 550px) {
+  .feature-btn {
+    width: 70%;
+  }
+}
+@media (max-width: 430px) {
+  .feature-btn {
+    width: 95%;
+  }
+  .features-title {
+    padding-top: 2rem;
+  }
+}
+@media (max-width: 1320px) {
+  .features {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+}
+@media (max-width: 1230px) {
+  .features {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
 }
 @media (max-width: 1100px) {
   .features {
@@ -41,6 +102,11 @@
   }
 }
 @media (max-width: 850px) {
+  .features {
+    margin-top: -210px;
+    margin-bottom: -200px;
+    padding-top: 13rem;
+  }
   .features-title {
     width: 75%;
   }
@@ -64,13 +130,10 @@
 }
 @media (max-width: 500px) {
   .features {
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
   .features-title {
     width: 100%;
   }
-}
-
-@media (max-width: 450px) {
 }
