--- a/src/Components/Header/Hero.css
+++ b/src/Components/Header/Hero.css
@@ -4,8 +4,10 @@ header {
   align-items: center;
   padding-left: 6rem;
   padding-right: 6rem;
-  padding-bottom: 10rem;
+  /* padding-bottom: 10rem; */
+  padding-bottom: 227px;
   background-color: #f2f7ff;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 83%);
 
   gap: 5rem;
 }
@@ -127,7 +129,8 @@ header {
     flex-direction: column;
     align-items: start;
     gap: 3rem;
-    padding-bottom: 5rem;
+    padding-bottom: 15rem;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 83%);
   }
   .hero-content {
     order: 1;
@@ -203,5 +206,9 @@ header {
   .hero-image__container {
     width: 100%;
     height: 18rem;
+  }
+  header {
+    padding-bottom: 10rem;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
   }
 }
