--- a/src/Components/Waitlist/WaitlistSection.css
+++ b/src/Components/Waitlist/WaitlistSection.css
@@ -2,8 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 2rem;
-  padding: 3rem 6rem 2rem 6rem;
+  gap: 5rem;
+  background-color: white;
+  padding: 90px 6rem 2rem 6rem;
+  clip-path: polygon(0 29%, 100% 0, 100% 100%, 0 100%);
 }
 .waitlist-image__container {
   width: 50%;
@@ -37,10 +39,46 @@
   margin: 0 auto;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  width: 70%;
+  width: 80%;
   color: var(--primaryColor);
 }
+.waitlist-cta {
+  padding: 0.7rem;
+  border-radius: px;
+  border: none;
+  /* width: 100%; */
+  background: #3a4b69;
+  gap: 10px;
 
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.2rem;
+  line-height: 29px;
+  color: #fefefe;
+  text-align: center;
+}
+.features-btn a {
+  color: white;
+  text-decoration: none;
+}
+.features-btn {
+  width: 45%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.features-btn:hover {
+  transition: ease-in 1s;
+
+  box-shadow: inset 400px 0 0 0 var(--secondaryColor);
+  color: var(--primaryColor);
+}
+.features-btn a:hover {
+  color: var(--primaryColor);
+}
 @media (max-width: 1200px) {
   .waitlist-content {
     width: 45%;
@@ -78,22 +116,23 @@
   }
 
   .waitlist-image__container {
-    height: 25rem;
-    width: 50%;
+    height: 35rem;
+    width: 61%;
     margin-top: -5rem;
   }
   .waitlist-content {
-    width: 50%;
+    width: 39%;
   }
   .waitlist-content__title {
     font-size: 1.7rem;
     line-height: 2rem;
   }
   .waitlist-content__description {
-    font-size: 1.1rem;
+    font-size: 1rem;
     line-height: 24px;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    width: 100%;
   }
 }
 @media (max-width: 850px) {
@@ -104,6 +143,7 @@
     gap: 3rem;
     padding-bottom: 5rem;
     background-color: #f2f7ff;
+    padding-top: 8rem;
   }
   .waitlist-content {
     padding-top: 3rem;
@@ -120,6 +160,9 @@
     height: 30rem;
     display: none;
   }
+  .waitlist-content__description {
+    width: 80%;
+  }
 }
 @media (max-width: 720px) {
   .waitlist-content__description {
@@ -129,6 +172,10 @@
 @media (max-width: 630px) {
   .waitlist-content {
     width: 90%;
+  }
+  .waitlist-content__description {
+    font-size: 0.9rem;
+    line-height: 24px;
   }
 }
 @media (max-width: 500px) {
@@ -140,5 +187,12 @@
 @media (max-width: 450px) {
   .waitlist-content {
     width: 100%;
+  }
+  .waitlist-content__description {
+    font-size: 0.9rem;
+    line-height: 24px;
+  }
+  .waitlistSection {
+    clip-path: polygon(0 18%, 100% 0, 100% 100%, 0 100%);
   }
 }
