--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,7 +1,7 @@
 .waitlist-cta {
   padding: 0.7rem;
   border-radius: px;
-  /* width: 100%; */
+
   background: #3a4b69;
 
   font-family: "Lato", sans-serif;
@@ -11,6 +11,29 @@
   line-height: 29px;
   color: #fefefe;
   text-align: center;
+}
+.form-btn {
+  width: 100%;
+  border: 2px solid var(--primaryColor);
+}
+.features-btn {
+  width: 45%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0.7rem 0;
+  background: #3a4b69;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.2rem;
+  line-height: 29px;
+  color: #fefefe;
+  border: none;
 }
 .features-btn:hover {
   transition: ease-in 1s;
@@ -25,7 +48,23 @@
   color: var(--primaryColor);
   border: 2px solid var(--primaryColor);
 }
-.form-btn {
-  width: 100%;
-  border: 2px solid var(--primaryColor);
+@media (max-width: 1000px) {
+  .features-btn {
+    width: 50%;
+  }
+}
+@media (max-width: 750px) {
+  .features-btn {
+    width: 55%;
+  }
+}
+@media (max-width: 550px) {
+  .features-btn {
+    width: 70%;
+  }
+}
+@media (max-width: 430px) {
+  .features-btn {
+    width: 95%;
+  }
 }
