--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -16,7 +16,7 @@
   width: 100%;
   border: 2px solid var(--primaryColor);
 }
-.features-btn {
+.navigation-btn {
   width: 45%;
   text-align: center;
   display: flex;
@@ -35,7 +35,7 @@
   color: #fefefe;
   border: none;
 }
-.features-btn:hover {
+.navigation-btn:hover {
   transition: ease-in 1s;
 
   box-shadow: inset 400px 0 0 0 var(--secondaryColor);
@@ -49,22 +49,32 @@
   border: 2px solid var(--primaryColor);
 }
 @media (max-width: 1000px) {
-  .features-btn {
+  .navigation-btn {
     width: 50%;
   }
 }
 @media (max-width: 750px) {
-  .features-btn {
+  .navigation-btn {
     width: 55%;
   }
 }
 @media (max-width: 550px) {
-  .features-btn {
+  .navigation-btn {
     width: 70%;
   }
 }
-@media (max-width: 430px) {
+@media (max-width: 428px) {
+  .navigation-btn {
+    width: 60%;
+    font-size: 1rem;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.0125em;
+    border-radius: 4px;
+  }
+}
+@media (max-width: 350px) {
   .features-btn {
-    width: 95%;
+    width: 70%;
   }
 }
