--- a/src/Components/Features/Features.css
+++ b/src/Components/Features/Features.css
@@ -1,6 +1,7 @@
 .features {
   padding: 3rem 10rem 0rem 10rem;
-  background-color: #eed79e;
+  background: #eed79e url(../images/squareBackground.png);
+  background-size: contain;
   margin-top: -144px;
   padding-top: 11rem;
   margin-bottom: -176px;
@@ -15,6 +16,7 @@
   text-align: center;
   margin: 0 auto;
   width: 65%;
+
   color: var(--primaryColor);
 }
 @media (max-width: 1320px) {
@@ -52,10 +54,6 @@
     font-size: 1.7rem;
     line-height: 2rem;
   }
-  .feature-text {
-    font-size: 1.1rem;
-    line-height: 24px;
-  }
 }
 @media (max-width: 850px) {
   .features {
@@ -75,13 +73,12 @@
   }
 }
 @media (max-width: 570px) {
+  .features {
+    padding-top: 14rem;
+  }
   .features-title {
     font-size: 1.5rem;
     line-height: 1.8rem;
-  }
-  .feature-text {
-    font-size: 1rem;
-    line-height: 24px;
   }
 }
 @media (max-width: 500px) {
@@ -93,8 +90,26 @@
     width: 100%;
   }
 }
-@media (max-width: 430px) {
+@media (max-width: 428px) {
   .features-title {
+    padding-top: 0;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.2rem;
+    line-height: 17px;
+    text-align: center;
+    letter-spacing: 0.001em;
+  }
+  .features {
+    background: #fff;
+    margin-top: 0;
     padding-top: 2rem;
+  }
+}
+@media (max-width: 350px) {
+  .features {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
