--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -56,13 +56,9 @@ footer {
 
     color: #ffffff;
   }
-  .socials-links a img {
-    width: 1.2rem;
-    height: 1.2rem;
-  }
 }
 @media (max-width: 550px) {
-  footer {
+  /* footer {
     background: #3a4b69;
     display: flex;
     flex-direction: column;
@@ -70,5 +66,18 @@ footer {
     justify-content: center;
     align-items: center;
     padding: 1.2rem 0.9rem;
+  } */
+  .company-name {
+    display: none;
+  }
+}
+
+@media (max-width: 428px) {
+  .copyright {
+    font-size: 12px;
+  }
+  .socials-links a img {
+    width: 0.75rem;
+    height: 0.75rem;
   }
 }
