--- a/src/Components/Header/Hero.css
+++ b/src/Components/Header/Hero.css
@@ -1,4 +1,4 @@
-header {
+.desktop-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6,7 +6,7 @@ header {
   padding-right: 6rem;
   /* padding-bottom: 10rem; */
   padding-bottom: 227px;
-  background-color: #f2f7ff;
+  background-color: var(--subsidiaryColor);
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 83%);
 
   gap: 5rem;
@@ -80,7 +80,7 @@ header {
   }
 }
 @media (max-width: 1100px) {
-  header {
+  .desktop-header {
     padding-left: 5rem;
     padding-right: 5rem;
     gap: 3rem;
@@ -88,7 +88,7 @@ header {
 }
 
 @media (max-width: 1000px) {
-  header {
+  .desktop-header {
     padding-left: 4rem;
     padding-right: 4rem;
   }
@@ -99,7 +99,7 @@ header {
   }
 }
 @media (max-width: 950px) {
-  header {
+  .desktop-header {
     padding-left: 3rem;
     padding-right: 3rem;
   }
@@ -124,13 +124,13 @@ header {
   }
 }
 @media (max-width: 850px) {
-  header {
+  .desktop-header {
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 3rem;
     padding-bottom: 15rem;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 83%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 84%);
   }
   .hero-content {
     order: 1;
@@ -184,17 +184,17 @@ header {
   }
 }
 @media (max-width: 500px) {
-  header {
+  .desktop-header {
     padding-left: 2rem;
     padding-right: 2rem;
-    padding-bottom: 3rem;
+    padding-bottom: 10rem;
+
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
   }
   .hero-content {
     order: 1;
     padding-top: 3rem;
     width: 90%;
-
-    /* margin: 0 auto; */
   }
 }
 
@@ -207,8 +207,13 @@ header {
     width: 100%;
     height: 18rem;
   }
-  header {
-    padding-bottom: 10rem;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+}
+@media (max-width: 428px) {
+  .desktop-header {
+    clip-path: none;
+    padding-bottom: 0;
+  }
+  .hero-content {
+    padding-top: 1rem;
   }
 }
