--- a/src/Components/Waitlist/WaitlistSection.css
+++ b/src/Components/Waitlist/WaitlistSection.css
@@ -5,11 +5,13 @@
   gap: 5rem;
   background-color: white;
   padding: 90px 6rem 2rem 6rem;
-  clip-path: polygon(0 29%, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 27%, 100% 0, 100% 100%, 0 100%);
 }
 .waitlist-image__container {
-  width: 50%;
-  height: 30rem;
+  width: 55%;
+  margin-top: -45px;
+
+  height: 34rem;
 }
 
 .waitlist-image__container img {
@@ -17,7 +19,7 @@
   height: 100%;
 }
 .waitlist-content {
-  width: 50%;
+  width: 45%;
   padding-top: 3rem;
 }
 .waitlist-content__title {
@@ -65,11 +67,6 @@
   .waitlistSection {
     padding-left: 4rem;
     padding-right: 4rem;
-  }
-
-  .waitlist-image__container {
-    height: 30rem;
-    width: 55%;
   }
 }
 @media (max-width: 950px) {
@@ -157,5 +154,37 @@
   }
   .waitlistSection {
     clip-path: polygon(0 18%, 100% 0, 100% 100%, 0 100%);
+  }
+}
+@media (max-width: 428px) {
+  .waitlistSection {
+    clip-path: none;
+    background-color: #f2f7ff;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .waitlist-content {
+    background-color: #fff;
+    padding-bottom: 3rem;
+    filter: none;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .waitlist-header {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .waitlist-content__title {
+    display: flex;
+    justify-content: center;
+    gap: 4px;
+    margin-top: 1rem;
+  }
+  .waitlist-content__description {
+    margin: 0 auto;
+  }
+  .waitlist-content__title img {
+    width: 1.7rem;
+    height: 1.7rem;
   }
 }
