--- a/src/Components/Header/styles.scss
+++ b/src/Components/Header/styles.scss
@@ -4,17 +4,17 @@
   align-items: center;
   padding-left: 6rem;
   padding-right: 6rem;
-  /* padding-bottom: 10rem; */
   padding-bottom: 227px;
   background-color: var(--subsidiaryColor);
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 83%);
-
   gap: 5rem;
 }
+
 .hero-content {
   width: 50%;
   padding-top: 3rem;
 }
+
 .hero-content__title {
   font-family: "Inter";
   font-style: normal;
@@ -23,6 +23,7 @@
   line-height: 3rem;
   color: var(--primaryColor);
 }
+
 .hero-content__description {
   font-family: "Lato", sans-serif;
   font-style: normal;
@@ -33,15 +34,18 @@
   margin-bottom: 1.5rem;
   color: #000000;
 }
+
 .hero-content__description span,
 .hero-content__title span {
   color: var(--secondaryColor);
 }
+
 .hero-image__container {
   height: 35rem;
   width: 50%;
   position: relative;
 }
+
 .hero-image__container img {
   width: 94%;
   height: 94%;
@@ -50,15 +54,16 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .hero-image__container--effect1 {
   width: 10%;
   height: 10%;
   background-color: var(--primaryColor);
   position: absolute;
   top: 0;
-
   right: 0;
 }
+
 .hero-image__container--effect2 {
   width: 10%;
   height: 10%;
@@ -66,6 +71,112 @@
   position: absolute;
   bottom: 0;
   left: 0;
+}
+
+.mobile-header {
+  padding: 2rem 2rem;
+  background-color: var(--subsidiaryColor);
+  backdrop-filter: blur(500px);
+}
+
+.mobile-header__title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--primaryColor);
+  margin: 0 auto;
+}
+
+.mobile-header__title span {
+  color: var(--secondaryColor);
+}
+
+.mobile-header__description {
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
+  padding: 1rem 0;
+  color: #000000;
+}
+
+.mobile-header__description span {
+  color: var(--secondaryColor);
+}
+
+.mobile-header img {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 1rem;
+}
+
+nav {
+  background-color: #f2f7ff;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
+@media (max-width: 345px) {
+  .mobile-header {
+    padding: 2rem 1rem;
+  }
+
+  .mobile-header__description {
+    width: 90%;
+  }
+  .mobile-header img {
+    width: 90%;
+    height: 90%;
+  }
+}
+
+@media (max-width: 1100px) {
+  nav {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  nav {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+}
+
+@media (max-width: 950px) {
+  nav {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
+
+@media (max-width: 500px) {
+  nav {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (max-width: 428px) {
+  nav {
+    text-align: center;
+    background-color: #f2f7ff;
+  }
+  nav img {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -79,6 +190,7 @@
     width: 55%;
   }
 }
+
 @media (max-width: 1100px) {
   .desktop-header {
     padding-left: 5rem;
@@ -98,6 +210,7 @@
     width: 55%;
   }
 }
+
 @media (max-width: 950px) {
   .desktop-header {
     padding-left: 3rem;
@@ -109,13 +222,16 @@
     width: 50%;
     margin-top: -5rem;
   }
+
   .hero-content {
     width: 50%;
   }
+
   .hero-content__title {
     font-size: 1.7rem;
     line-height: 2rem;
   }
+
   .hero-content__description {
     font-size: 1.1rem;
     line-height: 24px;
@@ -123,6 +239,7 @@
     margin-bottom: 1rem;
   }
 }
+
 @media (max-width: 850px) {
   .desktop-header {
     display: flex;
@@ -132,50 +249,53 @@
     padding-bottom: 15rem;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 84%);
   }
+
   .hero-content {
     order: 1;
     padding-top: 3rem;
     width: 70%;
-
-    /* margin: 0 auto; */
   }
+
   .hero-image__container {
     order: 2;
     margin-top: 0;
     margin: 0 auto;
-
     width: 80%;
     height: 30rem;
   }
 }
+
 @media (max-width: 700px) {
   .hero-image__container {
     width: 80%;
     height: 30rem;
   }
 }
+
 @media (max-width: 650px) {
   .hero-image__container {
     width: 90%;
     height: 25rem;
   }
 }
+
 @media (max-width: 570px) {
   .hero-image__container {
     width: 100%;
     height: 23rem;
   }
+
   .hero-content {
     order: 1;
     padding-top: 3rem;
     width: 80%;
-
-    /* margin: 0 auto; */
   }
+
   .hero-content__title {
     font-size: 1.5rem;
     line-height: 1.8rem;
   }
+
   .hero-content__description {
     font-size: 1rem;
     line-height: 24px;
@@ -183,14 +303,15 @@
     margin-bottom: 1rem;
   }
 }
+
 @media (max-width: 500px) {
   .desktop-header {
     padding-left: 2rem;
     padding-right: 2rem;
     padding-bottom: 10rem;
-
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
   }
+
   .hero-content {
     order: 1;
     padding-top: 3rem;
@@ -203,16 +324,19 @@
     margin: 0 auto;
     width: 100%;
   }
+
   .hero-image__container {
     width: 100%;
     height: 18rem;
   }
 }
+
 @media (max-width: 428px) {
   .desktop-header {
     clip-path: none;
     padding-bottom: 0;
   }
+
   .hero-content {
     padding-top: 1rem;
   }
